--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  overflow: auto;
 }
 header {
   position: relative;
@@ -15,6 +16,7 @@ header {
   width: 48px;
   height: 24px;
   animation: fly 30s infinite linear;
+  z-index: 3;
 }
 .tora {
   position: absolute;
@@ -24,6 +26,7 @@ header {
   width: 48px;
   height: 24px;
   animation: fly 30s infinite linear;
+  z-index: 3;
 }
 @keyframes fly {
   0% {
@@ -47,6 +50,7 @@ header {
   width: 85px;
   height: 50px;
   animation: clouds 60s linear infinite;
+  z-index: 1;
 }
 .cloud2 {
   position: absolute;
@@ -56,6 +60,7 @@ header {
   width: 100px;
   height: 36px;
   animation: clouds 60s linear infinite;
+  z-index: 4;
 }
 .cloud4 {
   position: absolute;
@@ -65,6 +70,7 @@ header {
   width: 60px;
   height: 36px;
   animation: clouds 60s linear infinite;
+  z-index: 1;
 }
 .cloud1 {
   position: absolute;
@@ -74,6 +80,7 @@ header {
   width: 48px;
   height: 34px;
   animation: clouds 60s linear infinite;
+  z-index: 4;
 }
 @keyframes clouds {
   0% {
@@ -88,7 +95,7 @@ header {
 }
 header h1 {
   position: absolute;
-  font-size: 18px;
+  font-size: 16px;
   bottom: 0px;
   right: 16px;
 }
@@ -145,7 +152,7 @@ footer {
 }
 main {
   margin: 0;
-  padding: 32px;
+  padding: 32px 0;
   background-color: mistyrose;
 }
 article {
@@ -179,16 +186,8 @@ hr {
   margin: 4px;
 }
 article img{
-  width: 350px;
+  width: 100%;
   height: 160px;
-}
-.html3 {
-  width: 320px;
-  height: 220px;
-}
-.html4, .html5, .html6, .html7, .css1 {
-  width: 60px;
-  height: 60px;
 }
 .dotinstall, .progate {
   width: 120px;
@@ -209,7 +208,23 @@ article img{
   height: 105px;
   margin-bottom: 8px;
 }
-@media (min-width:510px) {
+@media (min-width: 350px) {
+  main {
+    padding: 32px calc((100% - 350px) / 2);
+  }
+  article img {
+    width: 350px;
+  }
+}  
+@media (min-width: 414px) {
+  header h1 {
+    font-size: 18px;
+  }
+  main {
+    padding: 32px;
+  }
+}  
+@media (min-width: 510px) {
   nav {
     display: flex;
   }
@@ -227,6 +242,9 @@ article img{
   }  
 }
 @media (min-width: 600px) {
+  header h1 {
+    right: calc((100% - 600px) / 2 + 16px);
+  }
   .try div {
     display: flex;
     justify-content: flex-end;
@@ -239,6 +257,9 @@ article img{
 
 }
 @media (min-width: 950px) {
+  nav {
+    padding-left: calc((100% - 950px) / 2);
+  }
   article {
     width: 870px;
     margin: 0 auto;
